src/objects/JournalLine__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>UnitPrice__c  *  Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>明細金額（税抜）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>UnitCost__c * Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>明細原価</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <label>伝票</label>
        <referenceTo>Journal__c</referenceTo>
        <relationshipLabel>伝票明細</relationshipLabel>
        <relationshipName>JournalLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LineName__c</fullName>
        <label>明細名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商品</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>伝票明細</relationshipLabel>
        <relationshipName>JournalLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>数量</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitCost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>原価</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>単価</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>伝票明細</label>
    <nameField>
        <displayFormat>JL-{YY}{MM}{0000}</displayFormat>
        <label>伝票明細No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>